--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <a href="MainPage.html" target="_self" class="home-button">
+        <a href="index.html" target="_self" class="home-button">
             <img src="icon\Icon_cinnamoroll.svg" alt="홈" class="home-icon">
         </a>
 
