--- a/MJ_AI_makes_developer_stupid.html
+++ b/MJ_AI_makes_developer_stupid.html
@@ -10,7 +10,7 @@
 
     <header>
         <a href="index.html" target="_self" class="home-button">
-            <img src="icon\Icon_cinnamoroll.svg" alt="홈" class="home-icon">
+            <img src="icon\Icon_Home.svg" alt="홈" class="home-icon">
         </a>
 
 
