--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     
 
     <footer class="footer">
-        <p>&copy; 2025 Geffi Journal. All rights reserved.</p>
-    </footer>
+        <a href="MySecretPage.html" class="secret-button">
+            <img src="icon\icon_Secret.svg" alt="깃허브" class="github-icon"></a>
+        <p class="footer-text">&copy; 2024 Geffi Journal. All rights reserved.</p>
+      </footer>
     
 </body>
 </html>
