--- a/MySecretPage.html
+++ b/MySecretPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MJ_AI_makes_developer_stupid</title>
+    <link rel="icon" href="image\Geffi_Profile_Round.png" type="image/x-icon">
+    <title>SecretPage</title>
     <link rel="stylesheet" href="Style_Article.css">  <!-- CSS 연결 -->
 </head>
 <body>
