--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeffiJournal</title>
+    <link rel="icon" href="image\Geffi_Profile_Round.png" type="image/x-icon">
     <link rel="stylesheet" href="Style_Main.css">  <!-- CSS 연결 -->
 </head>
 <body>
