--- a/MJ_NextJournal.html
+++ b/MJ_NextJournal.html
@@ -11,7 +11,7 @@
 
     <header>
         <a href="index.html" target="_self" class="home-button">
-            <img src="icon/Icon_home.svg" alt="홈" class="home-icon">
+            <img src="icon\Icon_Home.svg" alt="홈" class="home-icon">
         </a>
 
 
@@ -39,6 +39,10 @@
             
         </p>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2025 Geffi Journal. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
