--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
     <div class="content">
-        <h1>Blunf Blog</h1>
-        <p>:: hello ::</p>
+        <h1 class="content-title">Blunf Blog</h1>
+        <p class="content-hi">:: hello ::</p>
         <a href="MJ_LearnDiscoard.html" class="Article_button">☁️ 디스코드 알아보기</a>
         <a href="MJ_AI_makes_developer_stupid.html" class="Article_button">☁️ AI가 개발자를 멍청하게 만든다?</a>
         <a href="MJ_NextJournal.html" class="Article_button">☁️ 출시 예정</a>
