--- a/MJ_LearnDiscoard.html
+++ b/MJ_LearnDiscoard.html
@@ -27,14 +27,33 @@
     </header>
 
     <div class="article_name">
-        <h1>디스코드 알아보기 </h1>
+        <h1 class="article_title">디스코드 알아보기 </h1>
         <p class="article_date">2025년 3월 22일</p>
     </div>
 
     <div class="content">    
+        <!-- 목차 추가 -->
+        <div class="table-of-contents">
+            <ul>
+                <li><a href="#section1">1. 디스코드란?</a></li>
+                <li><a href="#section2">2. 디스코드의 주요 기능</a></li>
+                <li><a href="#section3">3. 서버 만들기</a></li>
+                <li><a href="#section4">4. 채널 관리</a></li>
+            </ul>
+        </div>
+
         <p class="preserve-text">
-            
-            
+            <h2 id="section1">1. 디스코드란?</h2>
+            디스코드는 게이머들을 위해 만들어진 커뮤니케이션 플랫폼입니다...
+
+            <h2 id="section2">2. 디스코드의 주요 기능</h2>
+            디스코드는 다음과 같은 주요 기능들을 제공합니다...
+
+            <h2 id="section3">3. 서버 만들기</h2>
+            디스코드 서버를 만드는 방법을 알아보겠습니다...
+
+            <h2 id="section4">4. 채널 관리</h2>
+            채널을 효과적으로 관리하는 방법을 알아보겠습니다...
         </p>
     </div>
 
