--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeffiJournal</title>
+    <title>Geffi</title>
     <link rel="icon" href="image\Geffi_Profile_Round.png" type="image/x-icon">
     <link rel="stylesheet" href="Style_Main.css">  <!-- CSS 연결 -->
 </head>
@@ -28,7 +28,7 @@
 
 
     <div class="content">
-        <h1 class="content-title">Blunf Blog</h1>
+        <h1 class="content-title">Geffi </h1>
         <p class="content-hi">:: hello ::</p>
         <a href="MJ_LearnDiscoard.html" class="Article_button">☁️ 디스코드 알아보기</a>
         <a href="MJ_AI_makes_developer_stupid.html" class="Article_button">☁️ AI가 개발자를 멍청하게 만든다?</a>
