--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
 
     <div class="Main">
-        <h1 class="Main_title">Geffi </h1>
+        <h1 class="Main_title">    </h1>
 
         <div class="BlogSelection">
             <p class="BlogSelection_title">Blog</p>
