--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="image\Geffi_Profile_Round.png" type="image/x-icon">
     <link rel="stylesheet" href="Style_Main.css">  <!-- CSS 연결 -->
 </head>
+
+
+
+
 <body>
 
     <header>
@@ -15,7 +19,7 @@
         </div>
         
         <div class="header-center">
-            <h1 class="header-title">Geffi</h1>
+            <h1 class="header-title">Geffi Blog</h1>
         </div>
 
         <div class="header-right">
@@ -27,6 +31,9 @@
             </a>
         </div>
     </header>
+
+
+
 
     <script>
         // 날짜 업데이트 함수
@@ -41,6 +48,10 @@
         updateDate();
     </script>
 
+
+
+
+
     <div class="Main">
         <h1 class="Main_title">    </h1>
 
@@ -52,6 +63,11 @@
         </div>
     </div>
     
+
+
+
+
+
 
     <footer class="footer">
         <a href="MySecretPage.html" class="secret-button">
