--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <a href="YourPage.html" class="RecentItem">
             <div class="RecentItem_Img">
-              <img src="image/BlogThumbnail/th_discord.png" alt="썸네일" class="button-image">
+              <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">데이터저널리즘</small>
@@ -62,7 +62,7 @@
           </a>
           <a href="YourPage.html" class="RecentItem">
             <div class="RecentItem_Img">
-              <img src="image/BlogThumbnail/th_discord.png" alt="썸네일" class="button-image">
+              <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">블로그/UXUI</small>
@@ -72,7 +72,7 @@
           </a>
           <a href="YourPage.html" class="RecentItem">
             <div class="RecentItem_Img">
-              <img src="image/BlogThumbnail/th_discord.png" alt="썸네일" class="button-image">
+              <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">블로그/UXUI</small>
@@ -82,7 +82,7 @@
           </a>
           <a href="YourPage.html" class="RecentItem">
             <div class="RecentItem_Img">
-              <img src="image/BlogThumbnail/th_discord.png" alt="썸네일" class="button-image">
+              <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">블로그/기술</small>
@@ -92,7 +92,7 @@
           </a>
           <a href="YourPage.html" class="RecentItem">
             <div class="RecentItem_Img">
-              <img src="image/BlogThumbnail/th_discord.png" alt="썸네일" class="button-image">
+              <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">데이터저널리즘</small>
