--- a/BlogPage/25_LearnDiscord.html
+++ b/BlogPage/25_LearnDiscord.html
@@ -58,14 +58,23 @@
 
         </div>
 
+
         <div class="blog-writtingbox">
 우리 모두에게 익숙한 디스코드는 현재 게임, 문화, 비즈니스, 교육등 수많은 분야를 위한 커뮤니티 플랫폼이지만, 원래는 단순히 게이머를 위한 소셜 플랫폼이였다. 
 2015년 작은 스타트업이였던 디스코드가 어떻게 스카이프나, 팀스피크와 같은 경쟁사를 제치고 수억명의 사용자를 가질 정도로 성장할 수 있었을까?
 
 
+<nav class="blog-toc">
+  <ul>
+    <li><a href="#section1">☁️ 디스코드의 탄생</a></li>
+    <li><a href="#section2">☁️ 디스코드의 성장</a></li>
+    <li><a href="#section3">☁️ 디스코드의 차별화</a></li>
+    <li><a href="#section4">☁️ 최근 디스코드의 도전과 전략</a></li>
+  </ul>
+</nav>
 
 
-<h2>☁️디스코드의 탄생</h2>
+<h2 id="section1">☁️디스코드의 탄생</h2>
 디스코드는 2015년 제이슨 시트론(Jason Citron), 스탠 비슈네브스키(Stan Vishnevskiy)의 공동 창업에 의해 시작되었다.
 시트론은 이전에 모바일 게임 커뮤니티 플랫폼인 오픈파인트를 창업해 성공적으로 매각했던 인물로, 자신의 게임 스튜디오인 Hammer&Chisel 을 통해 디스코드를 개발했다.
 
@@ -75,7 +84,7 @@
 
 
 
-<h2>☁️디스코드의 성장</h2>
+<h2 id="section2">☁️디스코드의 성장</h2>
 <div style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; flex-wrap: wrap; gap: 20px; margin: 40px 0;">
   <p class="chart-description" style="flex: 1 1 300px; font-size: clamp(1rem, 2vw, 1.2rem); line-height: 1.6; color: #eee; white-space: pre-line;">
     초기 디스코드는 주로 게이머 커뮤니티를 중심으로 일어났다. 서비스 오픈 당시 레딧의 게임 게시판에서 디스코드의 편의성을 알아본 몇몇 유저가 디스코드 서버 링크를 걸기 시작하였고, 점차 많은 사람들이 사용하기 시작하였다. 
@@ -109,7 +118,7 @@
 </div>
 
 
-<h2>☁️디스코드의 차별화</h2>
+<h2 id="section3">☁️디스코드의 차별화</h2>
 디스코드의 도입 당시 팀스피크, 스카이프 등 경쟁 플랫폼들을 제치고 급성장할 수 있었던 이유는 기능적 차별성과 사용자중심 설계가 있다. 무료로 사용할 수 있는것, 복잡한 서버 설정없이 링크 한번으로 대화를 시작할 수 있는것, 팀스피크와 달리 별도로 서버 운영을 하거나 IP 주소를 입력하는 등의 번거로움을 없앤 것 등이 있다. 특히 웹 브라우저에서도 별도의 설치 없이 즉시 사용할 수 있었고, 다양한 플랫폼에서 동일한 사용자경험을 제공한 것도 주요한 차별점이었다. 
 
 이런 접근성 덕분에 수많은 사람들이 쉽게 커뮤니티를 형성할 수 있었고, 결국 서버 단위로 대규모 커뮤니티를 구축하는데도 이점이 생기게 된다. 대화 기록이 무제한에 가깝게 보존되기 때문에, 이전 내용을 언제나 찾아볼 수 있고, 실시간 음성을 상시로 열어두는 등의 자유로운 음성 채팅방의 역할도 가능하였다. 이런 기능들은 다른 플랫폼에서 느낄 수 없는 경험이였고 마치 친구들과 함께 노는 거실과 같은 느낌을 주었기에, 사용자는 더 많은 시간을 디스코드에서 보내게 된 것이다.
@@ -118,7 +127,7 @@
 
 <img src="https://cdn.pixabay.com/photo/2019/06/19/07/13/email-4284157_1280.png" alt="" class="blog-insertedimage">
 
-<h2>☁️최근 디스코드의 도전과 전략</h2>
+<h2 id="section4">☁️최근 디스코드의 도전과 전략</h2>
 이렇게 승승장구해온 디스코드가 최근 새로운 도전과제에 직면하고 있다. 코로나 당시 서비스 규모가 급격하게 커지며 직원을 크게 늘렸던 디스코드는 효율성 저하, 비용 부담 등의 문제에 직면하게 되었다. 그 결과 2023년 8월 4%의 인력감축, 2024년 1월에는 17%의 해고를 실시하게 된다. 회사의 재무상태가 위급하지는 않지만, 영업이익을 내지 못하는 상황이다. 
 
 이러한 상황은 디스코드의 비즈니스모델의 한계에 있다. 디스코드는 사용자경험 개선을 위해 방대한 무료서비스를 시행하고 있다. 특히 사용자 경험 개선을 위해 광고를 넣지 않기에, 유일한 비즈니스 모델은 유료 구독 서비스인 니트로(Nitro)이다. 2023년 매출은 전년대비 30%가량 상승한 수치이지만, 거대한 이용자 규모에 비해 매출 전환율은 저조한 편이다. 이에 따라 디스코드는 새로운 전략을 추진하고 있다.
@@ -153,11 +162,7 @@
 
 
     <footer class="footer">
-        <a href="MySecretPage.html" class="secret-button">
-            <img src="icon\icon_Secret.svg">
-        </a>
-
-        <p class="footer-text">&copy; 2025 Geffi Journal. All rights reserved.</p>
+        <p class="footer-text">&copy; 2025 Geffi Blog. All rights reserved.</p>
       </footer>
     
 
