--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <main>
         <div class="HelloWord">
-            <h1>Hello</h1>
+            <h1>Hello :)</h1>
         </div>
     
     
@@ -56,7 +56,7 @@
             </div>
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">데이터저널리즘</small>
-              <h3 class="RecentItem_Title">트럼프의 관세정책 분석및 예측</h3>
+              <h3 class="RecentItem_Title">트럼프의 관세정책에 따른 경제분석</h3>
               <p class="RecentItem_Summary">관세정책에 따른 대한민국의 경제 변화를 데이터를 통해 분석하고 예측합니다.</p>
             </div>
           </a>
@@ -85,7 +85,7 @@
               <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
-              <small class="RecentItem_Category">블로그/기술</small>
+              <small class="RecentItem_Category">블로그/it</small>
               <h3 class="RecentItem_Title">명령줄 인터페이스는 무엇인가요?</h3>
               <p class="RecentItem_Summary">CLI 탐구하기</p>
             </div>
@@ -95,7 +95,7 @@
               <img src="image\NO_SIGNAL.png" alt="썸네일" class="button-image">
             </div>
             <div class="RecentItem_Paragraph">
-              <small class="RecentItem_Category">데이터저널리즘</small>
+              <small class="RecentItem_Category">블로그/it</small>
               <h3 class="RecentItem_Title">AI가 개발자를 멍청하게 만든다?</h3>
               <p class="RecentItem_Summary">AI 시대에 생성형 인공지능이 개발자에게 미치는 영향 분석</p>
             </div>
