--- a/BlogPage/25_LearnDiscord.html
+++ b/BlogPage/25_LearnDiscord.html
@@ -62,8 +62,6 @@
         <div class="blog-writtingbox">
 우리 모두에게 익숙한 디스코드는 현재 게임, 문화, 비즈니스, 교육등 수많은 분야를 위한 커뮤니티 플랫폼이지만, 원래는 단순히 게이머를 위한 소셜 플랫폼이였다. 
 2015년 작은 스타트업이였던 디스코드가 어떻게 스카이프나, 팀스피크와 같은 경쟁사를 제치고 수억명의 사용자를 가질 정도로 성장할 수 있었을까?
-
-
 <nav class="blog-toc">
   <ul>
     <li><a href="#section1">☁️ 디스코드의 탄생</a></li>
@@ -72,14 +70,10 @@
     <li><a href="#section4">☁️ 최근 디스코드의 도전과 전략</a></li>
   </ul>
 </nav>
-
-
 <h2 id="section1">☁️디스코드의 탄생</h2>
 디스코드는 2015년 제이슨 시트론(Jason Citron), 스탠 비슈네브스키(Stan Vishnevskiy)의 공동 창업에 의해 시작되었다.
 시트론은 이전에 모바일 게임 커뮤니티 플랫폼인 오픈파인트를 창업해 성공적으로 매각했던 인물로, 자신의 게임 스튜디오인 Hammer&Chisel 을 통해 디스코드를 개발했다.
-
 <img src="https://cdn.pixabay.com/photo/2020/07/02/18/18/webinar-5363797_1280.png" alt="" class="blog-insertedimage">
-
 그들은 팀스피크, 스카이프와 같은 VoIP 소프트웨어를 이용해 실시간 전술 게임에서 소통하기가 어렵다는 것을 알아챘다.이를 계기로 사용자 친화적이고 가벼운 채팅 서비스를 만들기로 하였고, 이렇게 태어난것이 디스코드이다. 말 그대로 게임 커뮤니티의 불협화음(Discord)를 해결하자는 의미이다.
 
 
@@ -89,15 +83,10 @@
   <p class="chart-description" style="flex: 1 1 300px; font-size: clamp(1rem, 2vw, 1.2rem); line-height: 1.6; color: #eee; white-space: pre-line;">
     초기 디스코드는 주로 게이머 커뮤니티를 중심으로 일어났다. 서비스 오픈 당시 레딧의 게임 게시판에서 디스코드의 편의성을 알아본 몇몇 유저가 디스코드 서버 링크를 걸기 시작하였고, 점차 많은 사람들이 사용하기 시작하였다. 
     이렇게 수소문이 퍼지며 출시 8개월 만에 300만 이용자를 돌파하였고, 1년후에는 1200만명의 사용자를 기록하게 된다. 
-
   </p>
-  
   <iframe title="유저수 데이터" aria-label="Column Chart" id="datawrapper-chart-9qpEg" src="https://datawrapper.dwcdn.net/9qpEg/7/" scrolling="no" frameborder="0" style="border: none;" width="400" height="420" data-external="1"style="border: none;" width="400" height="410" data-external="1" style="flex: 1 1 400px; max-width: 100%; height: auto;">
   </iframe>
-
 </div>
-
-
 당시 디스코드 1주년인 2016년에는 PC Gamer지가 "디스코드는 현존 최고의 VoIP 서비스"라고 평하였고, 라이프해커에서도 인터페이스의 편의성과 멀티플랫폼의 다양성을 호평하였다. 이러한 긍정적인 반응이 입소문을 타며 빠르게 확장하게 된다.
 
 이런 성장 속에서 2020년 코로나19 팬데믹이 발생하였다. 이 기간은 디스코드에게 있어서 새로운 전환점이 되었는데, 사회적 거리두기로 인해 사람들이 집에 머무는 시간이 늘어나자, 전 세계 사용자들은 화상과 음성으로 소통할 새로운 공간을 찾기 시작하였다. 기존에 게이머 전용 소프트웨어 이미지의 디스코드는 이러한 기회를 놓치지 않았는데, 2020년 6월 디스코드는 회사의 슬로건을 "your place to talk"로 변경하고, 게임 커뮤니티를 넘어 일상적인 대화공간으로 정체성을 수정하게 된다. 
@@ -116,8 +105,6 @@
     100억달러 인수 제안 등 급속도로 성장하게 된다.
   </p>
 </div>
-
-
 <h2 id="section3">☁️디스코드의 차별화</h2>
 디스코드의 도입 당시 팀스피크, 스카이프 등 경쟁 플랫폼들을 제치고 급성장할 수 있었던 이유는 기능적 차별성과 사용자중심 설계가 있다. 무료로 사용할 수 있는것, 복잡한 서버 설정없이 링크 한번으로 대화를 시작할 수 있는것, 팀스피크와 달리 별도로 서버 운영을 하거나 IP 주소를 입력하는 등의 번거로움을 없앤 것 등이 있다. 특히 웹 브라우저에서도 별도의 설치 없이 즉시 사용할 수 있었고, 다양한 플랫폼에서 동일한 사용자경험을 제공한 것도 주요한 차별점이었다. 
 
@@ -128,11 +115,15 @@
 <img src="https://cdn.pixabay.com/photo/2019/06/19/07/13/email-4284157_1280.png" alt="" class="blog-insertedimage">
 
 <h2 id="section4">☁️최근 디스코드의 도전과 전략</h2>
-이렇게 승승장구해온 디스코드가 최근 새로운 도전과제에 직면하고 있다. 코로나 당시 서비스 규모가 급격하게 커지며 직원을 크게 늘렸던 디스코드는 효율성 저하, 비용 부담 등의 문제에 직면하게 되었다. 그 결과 2023년 8월 4%의 인력감축, 2024년 1월에는 17%의 해고를 실시하게 된다. 회사의 재무상태가 위급하지는 않지만, 영업이익을 내지 못하는 상황이다. 
+이렇게 승승장구해온 디스코드가 최근 새로운 도전과제에 직면하고 있다. 코로나 당시 서비스 규모가 급격하게 커지며 직원을 크게 늘렸던 디스코드는 효율성 저하, 비용 부담 등의 문제에 직면하게 되었다. 
+그 결과 2023년 8월 4%의 인력감축, 2024년 1월에는 17%의 해고를 실시하게 된다. 회사의 재무상태가 위급하지는 않지만, 영업이익을 내지 못하는 상황이다. 
 
-이러한 상황은 디스코드의 비즈니스모델의 한계에 있다. 디스코드는 사용자경험 개선을 위해 방대한 무료서비스를 시행하고 있다. 특히 사용자 경험 개선을 위해 광고를 넣지 않기에, 유일한 비즈니스 모델은 유료 구독 서비스인 니트로(Nitro)이다. 2023년 매출은 전년대비 30%가량 상승한 수치이지만, 거대한 이용자 규모에 비해 매출 전환율은 저조한 편이다. 이에 따라 디스코드는 새로운 전략을 추진하고 있다.
+이러한 상황은 디스코드의 비즈니스모델의 한계에 있다. 디스코드는 사용자경험 개선을 위해 방대한 무료서비스를 시행하고 있다. 
+특히 사용자 경험 개선을 위해 광고를 넣지 않기에, 유일한 비즈니스 모델은 유료 구독 서비스인 니트로(Nitro)이다. 2023년 매출은 전년대비 30%가량 상승한 수치이지만, 거대한 이용자 규모에 비해 매출 전환율은 저조한 편이다. 이에 따라 디스코드는 새로운 전략을 추진하고 있다.
+
 니트로의 요금제를 3$ 수준으로 낮춘 니트로 베이직 요금제를 도입해 많은 사용자가 부담없이 유료기능을 사용해볼 수 있도록 하였고, 서버 운영자들이 멤버십을 판매할 수 있는 서버 구독 기능, 스티커 판매, 서버 부스트 등 수익 모델을 늘려가는 중이다. 
-특히 사용자경험을 가장 중시하는 디스코드 특성상, 플랫폼 내에 광고를 도입하지는 않았지만, 2023년 말 일부 모바일 사용자에게 서드파티 광고를 시범 운영하는 등 신중한 테스트를 하고 있다.
+
+사용자경험을 가장 중시하는 디스코드 특성상, 플랫폼 내에 광고를 도입하지는 않았지만, 2023년 말 일부 모바일 사용자에게 서드파티 광고를 시범 운영하는 등 신중한 테스트를 하고 있다.
 
 또 최근 생성형 AI 기술을 도입해 대화 요약봇, Clyde봇 등을 추가하며 사용자경험을 향상시키고 있다. 
 이런 기능들은 디스코드를 단순한 채팅 도구가 아닌 스마트 커뮤니티 플랫폼으로 진화시키며, 이탈을 막고 사용자 참여도를 높이는 데 일조하고 있다.
