--- a/BlogPage/25_LearnDiscord.html
+++ b/BlogPage/25_LearnDiscord.html
@@ -79,7 +79,7 @@
 
 
 <h2 id="section2">☁️디스코드의 성장</h2>
-<div style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; flex-wrap: wrap; gap: 20px; margin: 40px 0;">
+<div style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; flex-wrap: wrap; gap: 20px; ">
   <p class="chart-description" style="flex: 1 1 300px; font-size: clamp(1rem, 2vw, 1.2rem); line-height: 1.6; color: #eee; white-space: pre-line;">
     초기 디스코드는 주로 게이머 커뮤니티를 중심으로 일어났다. 서비스 오픈 당시 레딧의 게임 게시판에서 디스코드의 편의성을 알아본 몇몇 유저가 디스코드 서버 링크를 걸기 시작하였고, 점차 많은 사람들이 사용하기 시작하였다. 
     이렇게 수소문이 퍼지며 출시 8개월 만에 300만 이용자를 돌파하였고, 1년후에는 1200만명의 사용자를 기록하게 된다. 
