--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="RecentItem_Paragraph">
               <small class="RecentItem_Category">블로그/UXUI</small>
               <h3 class="RecentItem_Title">사용자 행동을 데이터로 분석하기</h3>
-              <p class="RecentItem_Summary">데이터로 사용자의 생동을 분석하고, 마케팅에 적용하는 방법 알아보기</p>
+              <p class="RecentItem_Summary">데이터로 사용자의 행동을 분석하고, 마케팅에 적용하는 방법 알아보기</p>
             </div>
           </a>
           <a href="YourPage.html" class="RecentItem">
