--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
       <div class="header-left">
         <a href="../index.html" class="home-buton">Geffi</a>
-        <a href="Gallery.html" class="gotomygallerypage">go Gallery</a>
+        <a href="Activity.html" class="gotomygallerypage">Go Profile</a>
       </div>
 
         <div class="header-right">
