--- a/Activity.html
+++ b/Activity.html
@@ -54,23 +54,23 @@
 2023.01
 위아이티(연합동아리) - 서울시 1인가구 데이터 분석 프로젝트 (Python pandas)
 
-2023.03
-ALKON - 알고리즘 프로젝트 (C++)
-
 2023.09
-자료구조 개발 프로젝트 (Java)
+ALKON(교내동아리) - 알고리즘 프로젝트 (C++)
 
 2024.06
-토익 - 830점 Get
+토익 - 830점
 
-2025.03~
+2025.02
 토이프로젝트 - 개인 웹사이트 개발(html,css,js)
 
 2025.03~
-건대교지 - 데이터저널리즘 팀
+AI산업의 기술 트렌드와 투자 동향 분석 보고서 작성
 
 2025.03~
-메이커스팜 - 앱개발 프로젝트(React Native)
+건국대학교 교지편집위원회 - 데이터저널리즘 팀
+
+2025.03~
+메이커스팜(교내동아리) - 앱개발 프로젝트(React Native)
 
 2025.04
 머신러닝 모델을 활용한 마케팅 인사이트 도출 프로젝트
