--- a/Activity.html
+++ b/Activity.html
@@ -46,8 +46,8 @@
 
         <h3>김경원</h3>
 
-        <h4>건국대학교(22) 기술경영학과&산업공학과</h4>
-        <h4>BI 엔지니어 & AI 개발자</h4>
+        <h4>건국대학교(22) 기술경영학과&산업공학과[학사]</h4>
+        <h4>BI 엔지니어&AI 개발자</h4>
         
 
         <h5 class="Main_Activity">
