--- a/Activity.html
+++ b/Activity.html
@@ -14,7 +14,7 @@
     <main>
       <div class="BlogBox">
         <div class="InfoBox">
-            <a href="index.html" class="GoHomeBtn">
+            <a href="index_DontGoYet.html" class="GoHomeBtn">
                 <img src="icon/Icon_Home.svg" alt="">
             </a>
             <h2>프로필</h2>
