--- a/Activity.html
+++ b/Activity.html
@@ -61,7 +61,7 @@ AI산업의 기술 트렌드와 투자 동향 분석 보고서
 대한민국 지식산업센터 활성화 문제 분석 및 머신러닝 모델 개발
 
 2025.05 - KU 창업클럽
-KU 창업클럽 3기기
+KU 창업클럽 3기
         </h5>
       </div>
     </main>
